refactor: 오류 메세지 static 필도로 변경